Awful, quick fix for the new RC Filters in MW 1.32+
This really isn't the correct way to do this, but this works...

With the new, OOUI-ful RCFilter stuff, this rule causes the "hamburger" icon on the "Filter changes (use menu or search for filter)" <input> area to be mispositioned, and additionally something here makes that input one or two pixels too tall so it "overflows". Adding a new :not() selector here fixes both issues, but it's not the clean, nice, scalable solution I'd want.

--- a/css/only-mw.css
+++ b/css/only-mw.css
@@ -222,8 +222,9 @@ html .suggestions-result-current {
 /* Left ToC End */
 
 /* Input */
+/* The OOUI selector is a horrible hack for the new Recent Changes Filters in MW 1.32+ */
 select,
-input:not( [type=button] ):not( [type=checkbox] ):not( [type=submit] ) {
+input:not( [type=button] ):not( [type=checkbox] ):not( [type=submit] ):not( [class=oo-ui-inputWidget-input] ) {
 	display: inline-block;
 	padding: 0.2rem 0.4rem;
 	font-size: 1rem;
